This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

15-May-2005 (Lars Duening)  (3.3.705)
  - (simulate.c) runtime_error(), runtime_warning() and heart_beat_error()
      received a new argument 'caught' (Bug #0000385).

15-May-2005 (Lars Duening)  (3.3.704)
  - (object.c) Single-character operator closures like #'- couldn't
      be restored in arrays due to some outdated hack in the parser
      (Bug #0000384 and #0000386).

15-May-2005 (Lars Duening)  (3.3.703)
  - (sprintf) sprintf("%c", 0) returned an empty string instead of a
      string with the 0 character, because the code used the system
      sprintf() for this formatting internally (Bug #0000378).

14-May-2005 (Lars Duening)  (3.3.702)
  - (sprintf) Printing structures with "%O" or "%Q" in non-compact
      mode also prints the names of the structure members (Bug #0000380).

13-May-2005 (Lars Duening)  (3.3.701)
  - (configure) Added a check to see if the system is using a broken iconv
      (part of glibc 2.0-2.2) - this iconv can throw the driver into an
      endless loop (Bug #0000377).

13-May-2005 (Lars Duening)  (3.3.700)
  - (lex.c) When adding strings in preprocessor conditionals, the lhs
      string was freed twice, causing memory corruption (reported by Tobias).

24-Apr-2005 (Lars Duening)  (3.3.699)
  - (config.h.in, gcollect.c) Added a specific define LOG_NEW_CLEANUP
      to enable the logging of the automatic cleanup activity. This
      is useful if the cleanup is suspicious of hogging the CPU.
  - (main.c, pkg-tls.c) Improved the documentation for the TLS commandline
      options, removed a crasher when only one of the two cert locations
      is specified (thanks, Coogan!).
  - (xalloc.c) Added warning if ptmalloc is used under FreeBSD.
  - (configure) New configuration parameter '--with-tls-path' allows
      to specifiy a non-standard location for the TLS installation.
