@@ -59,16 +59,16 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 705)
-(Parent-Version lpmud 3-3 704)
+(Project-Version lpmud 3-3 706)
+(Parent-Version lpmud 3-3 705)
 (Version-Log "
-  - (simulate.c) runtime_error(), runtime_warning() and heart_beat_error()
-      received a new argument 'caught' (Bug #0000385).
+  - (object.c, sprintf.c, structs.c) Removed a couple compilation warnings
+      on x86-64.
 ")
 (New-Version-Log 
 ""
 )
-(Checkin-Time "Sun, 15 May 2005 13:57:25 -0600")
+(Checkin-Time "Mon, 06 Jun 2005 19:43:42 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -97,8 +97,12 @@
                   (ReleaseMinor 3)
                   (ReleaseMicro $ProjectMinorVersion$)
                   (ReleaseType "dev")
-                    ; "dev":   Branch is under development.
-                    ; "maint": Branch is in maintenance mode.
+                    ; Stable branches (even ReleaseMinor):
+                    ;   "dev":    Most recent 'stable' development snapshot.
+                    ;   "maint":  Branch is in maintenance mode.
+                    ; Unstable branches (odd ReleaseMinor):
+                    ;   "dev":   Branch is under active development.
+                    ;   "maint": Branch is in maintenance mode.
                  (ReleaseVersion "$ReleaseMajor$.$ReleaseMinor$.$ReleaseMicro$")
 )
 (Files
@@ -107,7 +111,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.12 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.86 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.768 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.768.1.1 644))
   (HISTORY (lpmud/f/49_HISTORY 1.385.1.25 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.21 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -203,7 +207,7 @@
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.13 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.74.1.11 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.22 644))
-  (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.81 644))
+  (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.81.1.1 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.22 644))
   (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.91 644))
   (src/md5.h (lpmud/l/18_md5.h 1.3 644))
@@ -218,13 +222,13 @@
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.7 644))
   (src/my-stdint.h (lpmud/u/b/39_my-stdint. 1.2 644))
   (src/object.h (lpmud/44_object.h 1.34.1.19.1.6.1.6 644))
-  (src/object.c (lpmud/45_object.c 1.62.1.88.1.53.1.11 644))
+  (src/object.c (lpmud/45_object.c 1.62.1.88.1.53.1.12 644))
   (src/otable.h (lpmud/f/27_otable.h 1.8.1.4 644))
   (src/otable.c (lpmud/43_otable.c 1.22.1.8 644))
   (src/parser.c (lpmud/l/13_parser.c 1.1 644))
   (src/parse.h (lpmud/f/26_parse.h 1.7.1.2.1.4 644))
   (src/parse.c (lpmud/42_parse.c 1.26.1.18 644))
-  (src/patchlevel.h (lpmud/40_patchlevel 1.23 644))
+  (src/patchlevel.h (lpmud/40_patchlevel 1.23.1.1 644))
 
   ;; PCRE
   (src/pcre/study.c (lpmud/q/51_study.c 1.2 644))
@@ -351,11 +355,11 @@
   (src/sysmalloc.h (lpmud/c/b/33_sysmalloc. 1.2 644))
   (src/sysmalloc.c (lpmud/c/b/34_sysmalloc. 1.7 644))
   (src/sprintf.h (lpmud/f/15_sprintf.h 1.3.1.4 644))
-  (src/sprintf.c (lpmud/28_sprintf.c 1.31.1.66 644))
+  (src/sprintf.c (lpmud/28_sprintf.c 1.31.1.67 644))
   (src/strfuns.h (lpmud/b/51_strfuns.h 1.11.1.8 644))
   (src/strfuns.c (lpmud/c/0_strfuns.c 1.9.1.22 644))
   (src/structs.h (lpmud/d/b/5_structs.h 1.4 644))
-  (src/structs.c (lpmud/d/b/6_structs.c 1.16 644))
+  (src/structs.c (lpmud/d/b/6_structs.c 1.17 644))
   (src/svalue.h (lpmud/f/39_datatypes. 1.34.1.23.1.7 644))
   (src/swap.h (lpmud/f/14_swap.h 1.7.1.3 644))
   (src/swap.c (lpmud/25_swap.c 1.36.1.51 644))
@@ -1379,7 +1383,7 @@
   (doc/other/mcp2.html (lpmud/c/b/30_mcp2.html 1.1 644) :no-keywords)
   (doc/other/flows.gif (lpmud/c/b/32_flows.gif 1.1 644) :no-keywords)
   (doc/other/mccp.htm (lpmud/c/b/31_mccp.htm 1.1 644) :no-keywords)
-  (doc/other/dhrystones.txt (lpmud/e/37_dhrystones 1.2.1.6 644))
+  (doc/other/dhrystones.txt (lpmud/e/37_dhrystones 1.2.1.7 644))
 
   ;; Mudlib Support
   (mud/README (lpmud/t/12_README 1.6.1.5 644))
