@@ -1,7 +1,11 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
-15-May-2005 (Lars Duening)  (3.3.705)
+06-Jun-2005 (Lars Duening)  (3.3.706)
+  - (object.c, sprintf.c, structs.c) Removed a couple compilation warnings
+      on x86-64.
+
+15-May-2005 (Lars Duening)  (3.3.705 = 3.4.0)
   - (simulate.c) runtime_error(), runtime_warning() and heart_beat_error()
       received a new argument 'caught' (Bug #0000385).
 
